--- a/public/styles.css
+++ b/public/styles.css
@@ -1,24 +1,22 @@
 body {
-    margin: 0;
     font-family: Arial, sans-serif;
+    margin: 0;
+    padding: 0;
 }
 
-#top-bar {
-    background-color: #f2f2f2;
-    padding: 10px;
-    text-align: center;
+#timeline {
+    width: 100%;
+    height: 50px;
+    background: #f2f2f2;
 }
 
-#map-container {
+.map-container {
     width: 66%;
     float: left;
-    height: calc(100vh - 50px);
 }
 
-#summary-box {
-    width: 34%;
+.summary-box {
+    width: 33%;
     float: left;
-    height: calc(100vh - 50px);
     padding: 20px;
-    background-color: #f9f9f9;
 }
