--- a/public/styles.css
+++ b/public/styles.css
@@ -1,30 +1,38 @@
 .layout {
     display: flex;
-    justify-content: space-between;
+    flex-direction: row;
+    height: 100vh;
 }
 
 .map-container {
     position: relative;
-    width: 80%;
-    height: 600px; /* Adjust according to your map's aspect ratio */
-    background-image: url('images/shepton-background-map.png');
-    background-size: cover;
-    background-position: center;
-}
-
-#buildings {
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 100%;
+    width: 75%;
     height: 100%;
 }
 
+.background-map {
+    width: 100%;
+    height: auto;
+    position: absolute;
+    left: 0;
+    top: 0;
+}
+
+.building-objects {
+    width: 100%;
+    height: auto;
+    position: absolute;
+    left: 0;
+    top: 0;
+}
+
 .sidebar {
-    width: 20%;
-    /* Add additional styling for the sidebar */
+    width: 25%;
+    height: 100%;
 }
 
 .summary-box {
-    /* Add styling for the summary box */
+    /* Styles for the summary box */
 }
+
+#timeline {
