--- a/public/styles.css
+++ b/public/styles.css
@@ -13,10 +13,11 @@ body, html {
     position: relative;
     background-image: url('images/shepton-background-map.png');
     background-size: cover;
-    background-position: center; /* Adjust this if needed */
+    background-position: center;
     background-repeat: no-repeat;
-    overflow: hidden; /* Prevents the SVG from overflowing */
+    overflow: hidden; /* Hide overflow to ensure that the SVG doesn't spill out */
 }
+
 
 #timeline {
     position: absolute;
@@ -34,10 +35,10 @@ body, html {
 }
 
 .building-objects {
-    position: absolute; /* Absolute positioning */
-    left: 0; /* Adjust as needed */
-    bottom: 0px; /* Adjust as needed */
-    width: 100%; /* 100% of parent */
-    height: auto;
+    position: absolute;
+    width: 100%; /* Match the width of the parent container */
+    height: 100%; /* Match the height of the parent container */
+    top: 0; /* Align to the top */
+    left: 0; /* Align to the left */
     z-index: 1; /* Ensures it appears above the background */
 }
