--- a/public/styles.css
+++ b/public/styles.css
@@ -11,13 +11,27 @@ body, html {
 .map-container {
     flex: 3;
     position: relative;
-    background-image: url('images/shepton-background-map.png');
-    background-size: cover;
-    background-position: center;
-    background-repeat: no-repeat;
-    overflow: hidden; /* Hide overflow to ensure that the SVG doesn't spill out */
+    overflow: hidden;
 }
 
+.background-map {
+    width: 100%;
+    height: auto;
+    display: block;
+    position: absolute;
+    top: 0;
+    left: 0;
+    z-index: 0; /* Ensure that it stays below the SVG */
+}
+
+.building-objects {
+    position: absolute;
+    width: 100%; /* Match the width of the parent container */
+    height: auto; /* Maintain aspect ratio */
+    top: 0; /* Align to the top */
+    left: 0; /* Align to the left */
+    z-index: 1; /* Ensure it appears above the background */
+}
 
 #timeline {
     position: absolute;
@@ -32,13 +46,4 @@ body, html {
 
 .summary-box {
     padding: 20px;
-}
-
-.building-objects {
-    position: absolute;
-    width: 100%; /* Match the width of the parent container */
-    height: 100%; /* Match the height of the parent container */
-    top: 0; /* Align to the top */
-    left: 0; /* Align to the left */
-    z-index: 1; /* Ensures it appears above the background */
 }
