--- a/public/styles.css
+++ b/public/styles.css
@@ -31,6 +31,7 @@ body, html {
     top: 0; /* Align to the top */
     left: 0; /* Align to the left */
     z-index: 1; /* Ensure it appears above the background */
+    fill: #808080; /* Middle grey color */
 }
 
 #timeline {
