--- a/public/styles.css
+++ b/public/styles.css
@@ -28,8 +28,8 @@ body, html {
     position: absolute;
     width: 100%; /* Match the width of the parent container */
     height: auto; /* Maintain aspect ratio */
-    top: 0; /* Align to the top */
-    left: 10px; /* Align to the left */
+    top: 2px; /* Align to the top */
+    left: 4px; /* Align to the left */
     z-index: 1; /* Ensure it appears above the background */
 }
 
