Added zoom on map

--- a/public/styles.css
+++ b/public/styles.css
@@ -12,8 +12,6 @@ body, html {
     flex: 3;
     position: relative;
     overflow: hidden;
-    top: 1px;
-    left: 2px;
 }
 
 .background-map {
@@ -23,16 +21,16 @@ body, html {
     position: absolute;
     top: 0;
     left: 0;
-    z-index: 0;
+    z-index: 0; /* Ensure that it stays below the SVG */
 }
 
 .building-objects {
     position: absolute;
-    width: 100%;
-    height: auto;
-    top: 0;
-    left: 0;
-    z-index: 1;
+    width: 100%; /* Match the width of the parent container */
+    height: auto; /* Maintain aspect ratio */
+    top: 1px; /* Align to the top */
+    left: 2px; /* Align to the left */
+    z-index: 1; /* Ensure it appears above the background */
 }
 
 #timeline {
@@ -50,22 +48,9 @@ body, html {
     padding: 20px;
 }
 
-.building-object {
-    fill: #999999; /* Standard color */
-}
-
-.building-object:hover {
-    stroke: #ff6600; /* Outline color on hover */
-    stroke-width: 6px; /* Outline width */
-    filter: drop-shadow(0px 8px 10px rgba(0, 0, 0, 0.4)); /* Long drop shadow */
-}
-
-/* Styles for modal window */
-.modal {
-    display: none;
+.zoom-controls {
     position: absolute;
-    background-color: #fff;
-    border: 1px solid #000;
-    padding: 10px;
-    z-index: 1000; /* Make sure it's above everything else */
+    top: 40px;
+    left: 10px;
+    z-index: 2; /* Ensure they are above the map and other elements */
 }
