--- a/public/styles.css
+++ b/public/styles.css
@@ -1,7 +1,6 @@
 body, html {
     margin: 0;
     padding: 0;
-    position: relative;
 }
 
 .layout {
@@ -13,23 +12,18 @@ body, html {
     flex: 3;
     position: relative;
     overflow: hidden;
-    transition: transform 0.3s ease;
 }
 
-.background-map {
+.background-map, .building-objects svg {
+    transition: transform 0.3s ease;
     width: 100%;
-    height: auto;
-    display: block;
     position: absolute;
     top: 0;
     left: 0;
-    z-index: 0;
 }
 
 .building-objects {
     position: absolute;
-    width: 100%;
-    height: auto;
     top: 1px;
     left: 2px;
     z-index: 1;
@@ -60,9 +54,7 @@ body, html {
 .building-object {
     fill: #999999;
     transition: all 0.3s;
-    stroke: #999999;
     stroke-width: 0px;
-    filter: drop-shadow(0 0px 0px rgba(0, 0, 0, 0));
 }
 
 .building-object:hover {
