--- a/public/styles.css
+++ b/public/styles.css
@@ -14,13 +14,16 @@ body, html {
     overflow: hidden;
 }
 
-.background-map, .building-objects {
+.zooming-area {
+    position: relative;
     width: 100%;
-    position: absolute;
+    height: 100%;
     transition: transform 0.3s ease; /* Smooth zoom transition */
 }
 
-.background-map {
+.background-map, .building-objects {
+    position: absolute;
+    width: 100%;
     top: 0;
     left: 0;
 }
@@ -31,9 +34,9 @@ body, html {
 }
 
 .zoom-controls {
-    position: fixed;
-    top: 40px;
-    left: 10px;
+    position: absolute;
+    bottom: 10px;
+    right: 10px;
     z-index: 3;
 }
 
@@ -41,7 +44,7 @@ body, html {
     position: absolute;
     top: 10px;
     left: 10px;
-    z-index: 3; /* To ensure it stays above the map and other elements */
+    z-index: 3;
 }
 
 .sidebar {
@@ -55,4 +58,11 @@ body, html {
 
 .building-object {
     fill: #999999;
-    transition: all 0.3s
+    transition: all 0.3s;
+}
+
+.building-object:hover {
+    stroke: #ff6600;
+    stroke-width: 6px;
+    filter: drop-shadow(0 4px 8px rgba(0, 0, 0, 0.2));
+}
