--- a/public/styles.css
+++ b/public/styles.css
@@ -8,43 +8,43 @@ body, html {
     height: 100vh;
 }
 
-.map-container {
+.zooming-area {
     flex: 3;
     position: relative;
     overflow: hidden;
 }
 
-.zooming-area {
-    position: relative;
-    width: 100%;
-    height: 100%;
-    transition: transform 0.3s ease; /* Smooth zoom transition */
-}
-
-.background-map, .building-objects {
+.map-container {
     position: absolute;
     width: 100%;
+    height: auto;
+    top: 2px;
+    left: 1px;
+    z-index: 1;
+}
+
+.background-map {
+    width: 100%;
+    height: auto;
+    position: absolute;
     top: 0;
     left: 0;
+    z-index: 0;
 }
 
 .building-objects {
+    position: absolute;
+    width: 100%;
+    height: auto;
     top: 2px;
     left: 1px;
-}
-
-.zoom-controls {
-    position: absolute;
-    bottom: 10px;
-    right: 10px;
-    z-index: 3;
+    z-index: 1;
 }
 
 #timeline {
     position: absolute;
     top: 10px;
     left: 10px;
-    z-index: 3;
 }
 
 .sidebar {
@@ -54,6 +54,13 @@ body, html {
 
 .summary-box {
     padding: 20px;
+}
+
+.zoom-controls {
+    position: fixed;
+    bottom: 40px;
+    right: 10px;
+    z-index: 9999; /* Keep on top of other elements */
 }
 
 .building-object {
