--- a/public/styles.css
+++ b/public/styles.css
@@ -1,50 +1,38 @@
 body, html {
     margin: 0;
     padding: 0;
+    height: 100%;
 }
 
 .layout {
     display: flex;
-    height: 100vh;
-}
-
-.zooming-area {
-    flex: 3;
-    position: relative;
-    overflow: hidden;
+    height: 100%;
 }
 
 .map-container {
-    position: absolute;
-    width: 100%;
-    height: auto;
-    top: 2px;
-    left: 1px;
-    z-index: 1;
+    flex: 3;
+    position: relative;
+    overflow: hidden;
+    height: 100%;
 }
 
-.background-map {
-    width: 100%;
-    height: auto;
+.background-map, .building-objects {
     position: absolute;
-    top: 0;
-    left: 0;
-    z-index: 0;
+    width: 100%;
+    height: 100%;
+    top: 2px;
+    left: 1px;
 }
 
 .building-objects {
-    position: absolute;
-    width: 100%;
-    height: auto;
-    top: 2px;
-    left: 1px;
-    z-index: 1;
+    z-index: 1; /* Ensure it appears above the background */
 }
 
 #timeline {
     position: absolute;
     top: 10px;
     left: 10px;
+    z-index: 2;
 }
 
 .sidebar {
