--- a/public/styles.css
+++ b/public/styles.css
@@ -16,12 +16,18 @@ body, html {
     height: 100%;
 }
 
-.background-map, .building-objects {
+.zooming-area {
     position: absolute;
     width: 100%;
     height: 100%;
     top: 2px;
     left: 1px;
+}
+
+.background-map, .building-objects {
+    width: 100%;
+    height: 100%;
+    position: absolute;
 }
 
 .building-objects {
