--- a/public/styles.css
+++ b/public/styles.css
@@ -20,11 +20,20 @@ body, html {
     position: absolute;
     width: 100%;
     height: 100%;
-    top: 2px;
-    left: 1px;
+    top: 0;
+    left: 0;
+    transition: transform 0.5s; /* Smooth transition for zooming */
 }
 
-.background-map, .building-objects {
+.background-map {
+    width: 100%;
+    height: auto; /* Maintain aspect ratio */
+    position: absolute;
+    top: 0;
+    left: 0;
+}
+
+.building-objects {
     width: 100%;
     height: 100%;
     position: absolute;
