--- a/public/styles.css
+++ b/public/styles.css
@@ -22,12 +22,12 @@ body, html {
     height: 100%;
     top: 0;
     left: 0;
-    transition: transform 0.5s; /* Smooth transition for zooming */
+    transition: transform 0.5s;
 }
 
 .background-map {
     width: 100%;
-    height: auto; /* Maintain aspect ratio */
+    height: auto;
     position: absolute;
     top: 0;
     left: 0;
@@ -40,7 +40,7 @@ body, html {
 }
 
 .building-objects {
-    z-index: 1; /* Ensure it appears above the background */
+    z-index: 1;
 }
 
 #timeline {
@@ -60,10 +60,17 @@ body, html {
 }
 
 .zoom-controls {
-    position: fixed;
+    position: absolute; /* Changed from fixed to absolute */
     bottom: 40px;
     right: 10px;
-    z-index: 9999; /* Keep on top of other elements */
+    z-index: 9999;
+    font-size: 24px; /* Increased font size for larger buttons */
+}
+
+button {
+    width: 40px; /* Width of the buttons */
+    height: 40px; /* Height of the buttons */
+    margin-bottom: 10px; /* Space between the buttons */
 }
 
 .building-object {
