--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -102,3 +102,20 @@ body, html {
     fill: orange;
     filter: drop-shadow(0 8px 16px rgba(0, 0, 0, 0.3));
 }
+
+.property-details input,
+.ownership-details input {
+    display: block;
+    width: 100%;
+    margin-bottom: 10px;
+    margin-top: 20px;
+}
+
+.toolbar label {
+    display: block;
+    margin-bottom: 5px;
+}
+
+.toolbar input[type="checkbox"] {
+    margin-right: 5px;
+}
